--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
 
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"],
+    }
   }
 }
